--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ img.emoji {
     <li id="menu-item-433" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-412 current_page_item menu-item-439"><a href="https://gunshi.github.io">Home</a></li>
 <li id="menu-item-439" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-433"><a href="publication.html">Publications</a></li>
 
-<li id="menu-item-415" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-415"><a href="cv.pdf">CV</a></li>
+<li id="menu-item-415" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-415"><a href="GunshiGupta2017.pdf">CV</a></li>
 <li id="menu-item-437" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-437"><a href="contact.html">Contact</a></li>
 
 
