--- a/project_alpha.html
+++ b/project_alpha.html
@@ -185,8 +185,11 @@ img.emoji {
                         <article id="post-413" class="clearfix post-413 page type-page status-publish hentry" role="article" >
                             
                             <section class="post_content clearfix" itemprop="articleBody">
-                                <h1 class="large_width">PRVO: Probabilistic Reciprocal Velocity Obstacle for Multi Robot Navigation under Uncertainty</h1>
-<p class="p1 large_width"><span class="s1">Gunshi Gupta  &amp; Graduate Research Assistant.  </span></p>
+                                <h1 class="large_width">View-Invariant Intersection Recognition from Videos using Deep Network Ensembles</h1>
+<p class="p1 large_width"><span class="s1">Abhijeet Kumar*,Gunshi Gupta*,Tushar Vaidya, Avinash Sharma, Vineeth N Balasubramanian, K. Madhav Krishna
+
+
+  &amp;  </span></p>
 <p></p>
                             
                             <div class="top_margin video_margin">
@@ -204,22 +207,8 @@ img.emoji {
                             <div class="section abstract top_margin content large_width">
                                 <h2>Abstract</h2>
                                 <p class="center-justified">
-                                    We present PRVO, a probabilistic variant of
-                                    Reciprocal Velocity Obstacle (RVO) for decentralized multirobot
-                                    navigation under uncertainty. PRVO characterizes the
-                                    space of velocities that would allow each robot to fulfill
-                                    its share in collision avoidance with a specified probability.
-                                    PRVO is modeled as chance constraints over the velocity
-                                    level constraints defined by RVO and takes into account the
-                                    uncertainty associated with both state estimation as well as
-                                    the actuation of each robot. Since chance constraints are in
-                                    general computationally intractable, we propose a series of
-                                    reformulations which when combined with time scaling based
-                                    concepts leads to a closed form characterization of solution
-                                    space of PRVO for a given probability of collision avoidance.
-                                    We validate our formulation through numerical simulations in
-                                    which we highlight the advantages of PRVO over the related
-                                    existing formulations.
+ 
+This paper strives to answer the following question: Is it possible to recognize an intersection when seen from different road segments that constitute the intersection? An intersection or a junction typically is a meeting point of three or four road segments. Its recognition from a road segment that is transverse to or 180 degrees apart from its previous sighting is an extremely challenging and yet a very relevant problem to be addressed from the point of view of both autonomous driving as well as loop detection. This paper formulates this as a problem of video recognition and proposes a novel LSTM based Siamese style deep network for video recognition. For what is indeed a challenging problem and the limited annotated dataset available we show competitive results of recognizing intersections when approached from diverse viewpoints or road segments. Specifically, we tabulate effective recognition accuracy even as the approaches to the intersection being compared are disparate both in terms of viewpoints and weather/illumination conditions. We show competitive results on both synthetic yet highly realistic data mined from the gaming platform GTA as well as on real world data made available through Mapillary.
                                 </p>
                             </div>
                             <div class="section downloads large_width">
