--- a/project_alpha.html
+++ b/project_alpha.html
@@ -186,7 +186,7 @@ img.emoji {
                             
                             <section class="post_content clearfix" itemprop="articleBody">
                                 <h1 class="large_width">View-Invariant Intersection Recognition from Videos using Deep Network Ensembles</h1>
-<p class="p1 large_width"><span class="s1">Abhijeet Kumar*,Gunshi Gupta*,Tushar Vaidya, Avinash Sharma, Vineeth N Balasubramanian, K. Madhav Krishna
+<p class="p1 large_width"><span class="s1">Abhijeet Kumar*, Gunshi Gupta*, Tushar Vaidya, Avinash Sharma, Vineeth N Balasubramanian, K. Madhav Krishna
 
 
   &amp;  </span></p>
@@ -229,7 +229,7 @@ This paper strives to answer the following question: Is it possible to recognize
                             </div>
                             <div class="section contact large_width">
                                 <h2>Contact</h2>
-                                <a href="mailto:bharath.gopalakrishnan@research.iiit.ac.in">bharath.gopalakrishnan@research.iiit.ac.in</a><br>    
+                                <a href="mailto:gunshigupta9@gmail.com">gunshigupta9@gmail.com</a><br>    
                             </div>
                             
                             <div class="clear"></div>
