--- a/index.html
+++ b/index.html
@@ -182,7 +182,10 @@ img.emoji {
                             
                             <section class="post_content clearfix" itemprop="articleBody">
                                 <h3>ABOUT</h3>
-<p class="p1"><span class="s1">Gunshi Gupta  &amp; Graduate Research Assistant.  </span></p>
+<p class="p1"><span class="s1">Hi, I'm a Graduate Research Assistant at the Robotics Research Center at IIIT-H. I graduated from Delhi Technological University as a major in Mathematics and Computing Engineering in 2016.
+Some of my interests : Computer Vision, Computational Gemoetry, Multi Robot SLAM, Generative Adversarial Models, Deep Reinforcement Learning
+
+ </span></p>
 <p></p>
                             </section> <!-- end article section -->
                             
