--- a/publication.html
+++ b/publication.html
@@ -156,7 +156,7 @@ img.emoji {
 
 </ul></nav><!-- end navigation -->
 
-			    <div class="top_content">
+			    <div id="main">
 <a href="project_page.html">View-Invariant Intersection Recognition from Videos using Deep Network Ensembles (Under Review)</a>
 </div> 
         </div><!-- end of container -->
