--- a/publication.html
+++ b/publication.html
@@ -163,7 +163,18 @@ img.emoji {
 
  
 			    <div id="main">
-<a href="project_page.html">View-Invariant Intersection Recognition from Videos using Deep Network Ensembles (Under Review)</a>
+
+
+                            <section class="post_content clearfix" itemprop="articleBody">
+<a href="project_alpha.html">View-Invariant Intersection Recognition from Videos using Deep Network Ensembles (Under Review)</a>
+
+<p class="p1"><span class="s1">
+
+ </span></p>
+<p></p>
+                            </section> <!-- end article section -->
+
+
 </div> 
     
        
