--- a/publication.html
+++ b/publication.html
@@ -166,7 +166,7 @@ img.emoji {
 
 
                             <section class="post_content clearfix" itemprop="articleBody">
-<a href="project_alpha.html">View-Invariant Intersection Recognition from Videos using Deep Network Ensembles (Under Review)</a>
+<a href="project_alpha.html">View-Invariant Intersection Recognition from Videos using Deep Network Ensembles (Under Review at WACV 2018)</a>
 
 <p class="p1"><span class="s1">
 
