--- a/cair.html
+++ b/cair.html
@@ -186,7 +186,7 @@ img.emoji {
                             
                             <section class="post_content clearfix" itemprop="articleBody">
                                 <h1 class="large_width">CAIR project (2017)</h1>
-<h3> Building a Multi Robot SLAM framework to optimise and merge pose graphs and provide dense reconstructions under differently constrained settings</h3>
+ Building a Multi Robot SLAM framework to optimise and merge pose graphs and provide dense reconstructions under differently constrained settings
 <p class="p1 large_width"><span class="s1">
   </span>
 </p>
@@ -221,6 +221,33 @@ In this framework also, we assume that a central computing node is available for
 Here, the amount of computation performed to obtain the resultant trajectory is lesser than that for the full-batch case, since the pose graphs are already individually optimized. Inter-robot loop closures do not have a huge impact on individual pose graphs --- they only align multiple pose graphs with respect to each other, while maintaining the rigidity of each pose graph. This framework can be used for multi-session mapping as well.
 
  
+<img src="figures/U-11.png" alt="some_text" width="400" height="400">
+
+
+<img src="figures/U-12.png" alt="some_text" width="400" height="400">
+
+<img src="figures/U-13.png" alt="some_text" width="400" height="400">
+
+<img src="figures/U-14.png" alt="some_text" width="400" height="400">
+
+<img src="figures/U-15.png" alt="some_text" width="400" height="400">
+
+<img src="figures/U-16.png" alt="some_text" width="400" height="400">
+
+
+<img src="figures/U-17.png" alt="some_text" width="400" height="400">
+
+
+<img src="figures/U-18.png" alt="some_text" width="400" height="400">
+
+<img src="figures/U-19.png" alt="some_text" width="400" height="400">
+
+<img src="figures/U-20.png" alt="some_text" width="400" height="400">
+
+<img src="figures/U-21.png" alt="some_text" width="400" height="400">
+
+<img src="figures/U-22.png" alt="some_text" width="400" height="400">
+
 
 <ul class="center-justified">
 Reading Resources
