--- a/project_alpha.html
+++ b/project_alpha.html
@@ -216,8 +216,8 @@ This paper strives to answer the following question: Is it possible to recognize
                                   <ul>
                                         <li class="grid">
                                       <div class="griditem">
-                                    <a href="resources/Bharath_et_al_iros17/iros_17_cam_ready_1589.pdf" target="_blank" class="imageLink"><img src="resources/Bharath_et_al_iros17/icon.png"></a>
-                                    <a href="resources/Bharath_et_al_iros17/iros_17_cam_ready_1589.pdf" target="_blank"></a>
+                                    <a href="" target="_blank" class="imageLink"><img src="resources/Bharath_et_al_iros17/icon.png"></a>
+                                    <a href="" target="_blank"></a>
                                     
                                     </div>
                                       </li>
