--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ img.emoji {
                             
                             <section class="post_content clearfix" itemprop="articleBody">
                                 <h3>ABOUT</h3>
-<p class="p1"><span class="s1">Hi, I'm a Graduate Research Assistant at the Robotics Research Center at IIIT-H. I graduated from Delhi Technological University as a major in Mathematics and Computing Engineering in 2016.
+<p class="p1"><span class="s1">Hi, I'm a Graduate Research Assistant at the <a href="http://robotics.iiit.ac.in/">Robotics Research Center</a> at <a href="https://www.iiit.ac.in/">IIIT-H</a>. I graduated from Delhi Technological University as a major in Mathematics and Computing Engineering in 2016.
 Some of my interests : Computer Vision, Computational Gemoetry, Multi Robot SLAM, Generative Adversarial Models, Deep Reinforcement Learning
 
  </span></p>
