--- a/cair.html
+++ b/cair.html
@@ -191,6 +191,18 @@ img.emoji {
   </span>
 </p>
 <p></p>
+
+                            <div class="top_margin video_margin">
+                                <video id="my-video" class="video-js" controls preload="auto" width="640" height="264"
+                                poster="cover.jpg" data-setup="{}">
+                                <source src="cair.mp4" type='video/mp4'>
+                                <p class="vjs-no-js">
+                                  To view this video please enable JavaScript, and consider upgrading to a web browser that
+                                  <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+                                </p>
+                                </video>
+
+                            </div>
                             
 
                             </section> 
