--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ img.emoji {
 Some of my interests : Computer Vision, Computational Gemoetry, Multi Robot SLAM, Generative Adversarial Models, Deep Reinforcement Learning.
 </p>
 <p>
-At RRC, one of the threads in I'm involved in is the CAIR project, sanctioned by DRDO. For more info, please visit <a href="cair.html">this page</a>.
+At RRC, one of the threads in I'm workingon is the CAIR project, sanctioned by DRDO. For more info, please visit <a href="cair.html">this page</a>.
 </p>
 
  </span></p>
