--- a/cair.html
+++ b/cair.html
@@ -186,7 +186,7 @@ img.emoji {
                             
                             <section class="post_content clearfix" itemprop="articleBody">
                                 <h1 class="large_width">CAIR project (2017)</h1>
- <h4>Building a Multi Robot SLAM framework to optimise and merge pose graphs and provide dense reconstructions under differently constrained settings<h4>
+ <h4 class="large_width">Building a Multi Robot SLAM framework to optimise and merge pose graphs, provide sparse and dense reconstructions under differently constrained settings<h4>
 <p class="p1 large_width"><span class="s1">
   </span>
 </p>
@@ -211,42 +211,57 @@ img.emoji {
                                 <p>
 
 <h2>Centralized Multi-Robot SLAM without Encounters - Full-Batch mode</h2>
+<p style="text-align:left;">
 In this framework, we assume that a central computing node is available for collaboratively estimating the trajectory and the map. The overall workflow in this pipeline is as follows.
-<ul align="left">
+</p>
+<ol align="left" style="text-align:left;">
 <li> Gather all robot data (stereo image pairs) onto the central computing node.</li>
 <li> Detect loop closures within the factor graph. Add the corresponding constraints only to that robot's factor graph where loop closures are detected.</li>
 <li> Perform visual loop closure detection across factor graphs and impose constraints involving the corresponding poses, this time across the factor graphs of multiple robots.</li>
 <li> Optimize the resulting multi-robot factor graph for joint trajectory estimates.</li>
 <li> Register the sparse pointclouds using the optimized poses to obtain a fused map.</li>
-</ul>
+</ol>
+<p style="text-align:left;">
 Here, we do not attempt to exploit any additional information obtained from robot encounters. Hence, this framework can also serve a dual purpose --- it can be used for multi-session mapping as well.
+</p>
 
 
+
+<br>
+<br>
 <h2>Centralized Multi-Robot SLAM without Encounters - Semi-Batch mode</h2>
+<p style="text-align:left;">
 In this framework also, we assume that a central computing node is available for collaboratively estimating the trajectory and the map. The overall workflow in this pipeline is as follows.
-<ul align="left">
+</p>
+<ol align="left" style="text-align:left;">
 <li> Perform pose-graph optimization on each robot individually. Detect loop closures within the factor graph. Add the corresponding constraints only to that robot's factor graph where loop closures are detected. Optimize the robot's pose graph using these loop closure constraints.</li>
 <li> Perform visual loop closure detection across factor graphs and impose constraints involving the corresponding poses, this time across the factor graphs of multiple robots.</li>
 <li> Optimize the resulting multi-robot factor graph for joint trajectory estimates.</li>
 <li> Register the sparse pointclouds using the optimized poses to obtain a fused map.</li>
-</ul>
+</ol>
+<p style="text-align:left;">
 Here, the amount of computation performed to obtain the resultant trajectory is lesser than that for the full-batch case, since the pose graphs are already individually optimized. Inter-robot loop closures do not have a huge impact on individual pose graphs --- they only align multiple pose graphs with respect to each other, while maintaining the rigidity of each pose graph. This framework can be used for multi-session mapping as well.
+</p>
 
+<br>
+<br>
 
 <h2>Centralized Multi-Robot SLAM without Encounters - Incremental mode</h2>
 
+<p style="text-align:left;">
 This setting is similar to the previous, but has the major difference that pose graph optimization is carried out in an incremental fashion, to facilitate real-time operation. We specifically use the Smoothing and Mapping (SAM) framework due to the quick nature of its updates and availability of stable open-source implementations (GTSAM).
- 
-
+</p> 
+<br>
+<br>
 <h2>Distributed Multi-Robot SLAM with Encounters</h2>
-<p>
+<p style="text-align:left;">
 During an encounter, apart from transmitting the visual loop descriptors, each robot transmits its entire pose graph to the other robot, to facilitate distributed optimization of the pose graph.
 We assume that robots encounter each other during exploration of the environment. When an encounter happens, we also assume that one robot makes a relative measurement of the other robot's pose at that instant. This measurement can be made by placing special markers on the robot so that a robot can be detected when it is in another robot's sensing range, or just by a simple exchange of robot's (local frame) coordinates when both robots are in each others' communication range.
 </p>
-<p>
+<p style="text-align:left;">
 The method used for implementing the encounter has an implication on the topology of the resulting combined factor graph. If robot's can detect each other only visually (when they are in sensing range), it could frequently happen that only one robot sees the other robot. The other robot does not see the first robot if its camera is oriented in some other direction. Hence, this would lead to unidirectional edges at the set of poses where an encounter occurs. However, if a wireless communication based method is used, where robots exchange their (local frame) coordinates when in communicating distance, this results in a bidirectional edge between their poses at that instant.
 </p>
-<ul align="left">
+<ol align="left" style="text-align:left;">
 Typical workflow is as follows.
 
 <li> Perform graph-based SLAM on robots individually, visually detecting loops within the factor graph.</li>
@@ -255,9 +270,12 @@ Typical workflow is as follows.
 <li> Construct a joint factor graph, using the other robot's pose graph and by detecting loops across pose graphs.</li>
 <li> On each robot, optimize the resulting combined factor graph to obtain the trajectory estimate.</li>
 <li> Register the map using the optimized poses.</li>
-</ul>
+</ol>
+<p style="text-align:left;">
 Note that, for a complete trajectory and map estimate, apart from encounters during exploration, a distributed optimization setting necessitates that the robots indulge in a rendezvous upon completion of exploration, to facilitate information exchange.
-
+</p>
+<br>
+<br>
 
 <section>
 
