--- a/project_alpha.html
+++ b/project_alpha.html
@@ -186,7 +186,7 @@ img.emoji {
                             
                             <section class="post_content clearfix" itemprop="articleBody">
                                 <h1 class="large_width">View-Invariant Intersection Recognition from Videos using Deep Network Ensembles (Currently Under Review for WACV 2018)</h1>
-<p class="p1 large_width"><span class="s1">Abhijeet Kumar*, Gunshi Gupta*, Tushar Vaidya, Avinash Sharma, Vineeth N Balasubramanian, K. Madhav Krishna
+<p class="p1 large_width"><span class="s1">Abhijeet Kumar*, Gunshi Gupta*, Avinash Sharma, Vineeth N Balasubramanian, K. Madhav Krishna
   </span>
 </p>
 <p></p>
