--- a/project_alpha.html
+++ b/project_alpha.html
@@ -219,13 +219,14 @@ This paper strives to answer the following question: Is it possible to recognize
 
 
                             <div class="section downloads large_width">
-<!--
+
                                 <h2>Downloads</h2>
                                 <center>
                                   <ul>
                                         <li class="grid">
                                       <div class="griditem">
-                                    <a href="" target="_blank" class="imageLink"><img src="resources/Bharath_et_al_iros17/icon.png"></a>
+                                    <!--<a href="" target="_blank" class="imageLink"><img src="resources/Bharath_et_al_iros17/icon.png"></a>-->
+<a href="WACV-Paper+Supplementary.pdf" target="_blank" class="imageLink"><img src="cover.jpg"></a>
                                     <a href="" target="_blank"></a>
                                     
                                     </div>
@@ -234,7 +235,7 @@ This paper strives to answer the following question: Is it possible to recognize
 
                                     </ul>
                                     </center>
--->
+
                             </div>
                             <div class="section contact large_width">
                                 <h2>Contact</h2>
