--- a/project_alpha.html
+++ b/project_alpha.html
@@ -226,7 +226,7 @@ This paper strives to answer the following question: Is it possible to recognize
                                         <li class="grid">
                                       <div class="griditem">
                                     <!--<a href="" target="_blank" class="imageLink"><img src="resources/Bharath_et_al_iros17/icon.png"></a>-->
-<a href="WACV-Paper+Supplementary.pdf" target="_blank" class="imageLink"><img src="cover.jpg"></a>
+<a href="WACV-Paper+Supplementary.pdf" target="_blank" class="imageLink"><img src="cover.jpg" height="42" width="42"></a>
                                     <a href="" target="_blank"></a>
                                     
                                     </div>
