--- a/index.html
+++ b/index.html
@@ -182,11 +182,12 @@ img.emoji {
                             
                             <section class="post_content clearfix" itemprop="articleBody">
                                 <h3>ABOUT</h3>
-<p class="p1"><span class="s1">Hi, I'm a Graduate Research Assistant at the <a href="http://robotics.iiit.ac.in/">Robotics Research Center</a> at <a href="https://www.iiit.ac.in/">IIIT-H</a>. I graduated from Delhi Technological University as a major in Mathematics and Computing Engineering in 2016.
-<p>
+<p class="p1" style="text-align:justify">
+<span class="s1">Hi, I'm a Graduate Research Assistant at the <a href="http://robotics.iiit.ac.in/">Robotics Research Center</a> at <a href="https://www.iiit.ac.in/">IIIT-H</a>. I graduated from Delhi Technological University as a major in Mathematics and Computing Engineering in 2016.
+<br>
 Some of my interests : Computer Vision, Computational Gemoetry, Multi Robot SLAM, Generative Adversarial Models, Deep Reinforcement Learning.
-</p>
-<p>
+<br>
+
 At RRC, one of the threads in I'm workingon is the CAIR project, sanctioned by DRDO. For more info, please visit <a href="cair.html">this page</a>.
 <br>
 This led to research on the problem of Viewpoint Invariant Place Reocgnition resulting in "View-Invariant Intersection Recognition from Videos using Deep Network Ensembles" submitted to WACV 2018. 
