--- a/project_alpha.html
+++ b/project_alpha.html
@@ -185,7 +185,7 @@ img.emoji {
                         <article id="post-413" class="clearfix post-413 page type-page status-publish hentry" role="article" >
                             
                             <section class="post_content clearfix" itemprop="articleBody">
-                                <h1 class="large_width">View-Invariant Intersection Recognition from Videos using Deep Network Ensembles (Currently Under Review for WACV 2018)</h1>
+                                <h1 class="large_width">View-Invariant Intersection Recognition from Videos using Deep Network Ensembles</h1>
 <p class="p1 large_width"><span class="s1">Abhijeet Kumar*, Gunshi Gupta*, Avinash Sharma, Vineeth N Balasubramanian, K. Madhav Krishna
   </span>
 </p>
