--- a/publication.html
+++ b/publication.html
@@ -178,7 +178,7 @@ img.emoji {
                         
                         <article id="post-23" class="clearfix post-23 page type-page status-publish hentry" role="article">
                                                         <section class="post_content clearfix" itemprop="articleBody">
-<a href="project_alpha.html">View-Invariant Intersection Recognition from Videos using Deep Network Ensembles (Under Review at WACV 2018)</a>
+<a href="project_alpha.html">View-Invariant Intersection Recognition from Videos using Deep Network Ensembles (Under Review)</a>
                     </section> <!-- end article section -->
 
             
