--- a/index.html
+++ b/index.html
@@ -188,11 +188,10 @@ img.emoji {
 Some of my interests : Computer Vision, Computational Gemoetry, Multi Robot SLAM, Generative Adversarial Models, Deep Reinforcement Learning.
 <br>
 
-At RRC, one of the threads in I'm workingon is the CAIR project, sanctioned by DRDO. For more info, please visit <a href="cair.html">this page</a>.
+At RRC, one of the threads in I'm working on is the CAIR project, sanctioned by DRDO. For more info, please visit <a href="cair.html">this page</a>.
 <br>
-This led to research on the problem of Viewpoint Invariant Place Reocgnition resulting in "View-Invariant Intersection Recognition from Videos using Deep Network Ensembles" submitted to WACV 2018. 
+This led to research on the problem of Viewpoint Invariant Place Reocgnition resulting in "View-Invariant Intersection Recognition from Videos using Deep Network Ensembles" submitted to IROS 2018. 
 <br>
-I was also part of a study group exploring graph convolutional networks for a related problem.
 </p>
 
  </span></p>
